--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="game.css">
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
     <title>GAME</title>
 </head>
 
-
 <body>
-
+    
+    <h1>Lives: <span class="playerLivesCount"></span></h1>
+    <section></section>
     
 
 </body>
