--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="game.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
     <script src="game.js" defer></script>
     <title>GAME</title>
 </head>
 
 <body>
     
-    <h1>Lives: <span class="playerLivesCount"></span></h1>
-    <section></section>
+    <h1>Lives: <span class="playerLivesCount" aria-live="polite"></span></h1>
+    <section aria-live="assertive"></section>
     
 
 </body>
