tab and enter working, beginning to piece together arrow functions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     
-    <h1>Lives: <span class="playerLivesCount" aria-live="polite"></span></h1>
+    <h1 tabindex="0">Lives: <span class="playerLivesCount" aria-live="polite"></span></h1>
     <section aria-live="assertive"></section>
     
 
