--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 <canvas></canvas>
+<script src="js/collisions.js"></script>
 <script src="js/classes/Sprite.js"></script>
 <script src="js/classes/Player.js"></script>
 <script src="js/eventListeners.js"></script>
